[package]
name = "webnote"
version = "2.0.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
rusqlite = "0.33"
rand = "0.9"
seahash = "4"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
askama = "0.12"
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
