[package]
name = "webnote"
version = "3.1.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
rand = "0.9.2"
tokio = { version = "1.47.0", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower = "0.5.2"
ahash = "0.8.12"
serde_urlencoded = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
rust-embed = "8.7.2"
askama = "0.14.0"
mime_guess = "2.0.5"
base64 = "0.22.1"
tower-http = { version = "0.6.6", features = ["cors"] }

[build-dependencies]
lightningcss = "1.0.0-alpha.67"
minify-js = "0.6.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
